# spaninsight

./: .gitignore  LICENSE  README.md  main.py  plan.md  pyproject.toml
.github/workflows/: build-all.yml  deploy-pages.yml
gateway/: index.js
src/: __init__.py  main.py
src/assets/: outfit.css
src/components/: brand_header.py  chart_card.py  credit_badge.py  data_preview.py  file_import_card.py  form_editor.py  project_switcher.py  refresh_button.py  report_editor.py  stat_card.py  suggestion_chips.py
src/core/: __init__.py  constants.py  state.py  styles.py  theme.py  tokens.py  utils.py
src/services/: ad_service.py  ai_service.py  api_client.py  audio_service.py  bip39_words.py  camera_service.py  credit_service.py  db_service.py  file_picker_service.py  file_service.py  forms_service.py  mcp_client.py  project_service.py  report_service.py  sandbox.py  storage_service.py  uuid_service.py
src/services/ai/: __init__.py  analysis.py  audio.py  client.py  forms.py  reports.py  vision.py
src/views/: __init__.py  analysis_view.py  forms_view.py  home_view.py  onboarding_view.py  report_view.py  settings_view.py  splash_view.py
src/views/analysis/: __init__.py  handlers.py  layout.py  state.py  ui_components.py
src/views/analysis/handlers/: __init__.py  ai.py  autopilot.py  base.py  exports.py  imports.py  pins.py  sandbox.py
src/views/forms/: __init__.py  dashboard.py  detail.py  layout.py  state.py
src/views/reports/: __init__.py  handlers.py  layout.py  state.py
storage/data/: history.json  settings.json
tests/: test_ai_reports.py  test_core.py  test_data_preview.py  test_db_service.py  test_file_service.py  test_project_service.py  test_sandbox.py  test_utils.py
