[project]
name = "spaninsight"
version = "1.0.0"
description = "A high-performance, privacy-first data intelligence platform for smart data collection, analysis and reporting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet==0.85.0",
    "flet-charts==0.85.0",
    "flet-ads==0.85.0",
    "flet-audio-recorder==0.85.0",
    "flet-secure-storage==0.85.0",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.7",
    "python-pptx>=1.0.2",
]

[tool.flet]
org = "com.spaninsight"
product = "Spaninsight"
build_number = 1

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "com.spaninsight.app"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.WAKE_LOCK" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_EXTERNAL_STORAGE" = true

[tool.flet.android.feature]
"android.software.leanback" = false
"android.hardware.touchscreen" = true
