[project]
name = "spaninsight"
version = "1.2.1"
description = "A high-performance, privacy-first data intelligence platform for smart data collection, analysis and reporting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet==0.85.0",
    "flet-ads==0.85.0",
    "flet-audio-recorder==0.85.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "shapely>=2.0.6",
    "jq>=1.8.0",
    "pendulum>=3.2.0",
    "msgspec>=0.18.6",
    "sqlalchemy>=2.0.49",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff",
]

[tool.flet]
org = "com.spaninsight"
product = "Spaninsight"
build_number = 4

[tool.flet.app]
path = "src"


[tool.flet.app.boot_screen]
show = true
message = "Preparing the app for its first launch…"

[tool.flet.android]
bundle_id = "com.spaninsight.app"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "false"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-5679949845754640~9586310622"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.WAKE_LOCK" = true

[tool.flet.android.feature]
"android.software.leanback" = false
"android.hardware.touchscreen" = true

[tool.pytest.ini_options]
pythonpath = ["src"]
